# senter

./: .gitignore  Procfile  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
.ebextensions/: django.config
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
cart/: context_processor.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
categories/: admin.py  models.py  senter - Shortcut.lnk
categories/migrations/: 0001_initial.py
orders/: models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
senter/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/CACHE/css/: main.b7a0fda077d4.css
static/css/: style.css
store/: admin.py  context_processor.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_rename_description_product_description_1_and_more.py  0002_rename_features_image_1_product_feature_image_1_and_more.py  0003_alter_product_description_1_and_more.py
templates/: about.html  base.html  contact.html  index.html  privacy.html  terms.html
templates/accounts/: login.html  register.html
templates/assets/css/: bootstrap.min.css
templates/assets/img/slider/: asset13
templates/assets/js/: purecounter.js
templates/includes/: alert.html  footer.html  header.html
templates/order/: message-payment.html  order_recieved_email.html  payment.html
templates/store/: cart.html  checkout.html  portal-in-progress.html  single.html  store.html
templates/store/views/: grid-1.html  grid-2.html  grid-3.html  grid-4.html
