[tool.poetry]
name = "senter"
version = "0.1.0"
description = ""
authors = ["mukund-9652 <mukundravisankaran2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"
pillow = "^9.4.0"
python-decouple = "^3.7"
pyyaml = "^6.0"
requests = "^2.28.2"
instamojo-wrapper = "^1.2.0"
django-session-timeout = "^0.1.0"
python-dateutil = "^2.8.2"
django-compressor = "^4.3"
django-libsass = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
