[tool.poetry]
name = "senter"
version = "0.1.0"
description = ""
authors = ["mukund-9652 <mukundravisankaran2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.6.0"
awsebcli = "3.20.3"
botocore = "1.23.54"
cement = "2.8.2"
certifi = "2022.12.7"
charset-normalizer = "2.0.12"
colorama = "0.4.3"
distlib = "0.3.6"
django = "4.1.5"
django-appconf = "1.0.5"
django-compressor = "4.3"
django-libsass = "0.9"
django-session-timeout = "0.1.0"
filelock = "3.9.0"
future = "0.16.0"
gunicorn = "20.1.0"
idna = "3.4"
instamojo-wrapper = "1.2.0"
jmespath = "0.10.0"
libsass = "0.22.0"
pathspec = "0.9.0"
pillow = "9.4.0"
platformdirs = "2.6.2"
pypiwin32 = "223"
python-dateutil = "2.8.2"
python-decouple = "3.7"
pywin32 = "305"
pyyaml = "5.4.1"
rcssmin = "1.1.1"
requests = "2.26.0"
rjsmin = "1.2.1"
semantic-version = "2.8.5"
six = "1.14.0"
sqlparse = "0.4.3"
termcolor = "1.1.0"
tzdata = "2022.7"
urllib3 = "1.26.14"
virtualenv = "20.17.1"
wcwidth = "0.1.9"
whitenoise = "6.3.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
