[tool.poetry]
name = "senter"
version = "0.1.0"
description = ""
authors = ["mukund-9652 <mukundravisankaran2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
django-libsass = "^0.9"
django-compressor = "^4.3"
django-session-timeout = "^0.1.0"
PyYAML = "^6.0"
python-decouple = "^3.7"
python-dateutil = "^2.8.2"
instamojo-wrapper = "^1.2.0"
requests = "^2.28.2"
Pillow = "^9.4.0"
Django = "^4.1.5"
dj-database-url = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
